Added XML highlighter